initial kelly commit

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import ContactForm from '../components/ContactForm.astro';
 
 export async function getStaticPaths() {
     const pages = await getCollection('pages');
@@ -20,12 +21,11 @@ const { Content } = await page.render();
 ---
 
 <BaseLayout title={seo?.title ?? title} description={seo?.description} image={seo?.image} showHeader={false}>
-    <article class="mb-16 sm:mb-24">
-        <header class="mb-8">
-            <h1 class="text-3xl leading-tight font-serif font-medium sm:text-5xl sm:leading-tight">{title}</h1>
-        </header>
-        <div class="max-w-none prose prose-dante sm:prose-lg">
+    <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">{title}</h1>
+    <article class="mb-12 text-normal leading-normal">
+        <div class="max-w-none">
             <Content />
         </div>
     </article>
+    {page.slug === 'contact' && <ContactForm />}
 </BaseLayout>
