--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -21,12 +21,13 @@ const navLinks = siteConfig.headerNavLinks || [];
                 <ul id="menu-items" class="menu flex gap-6">
                     {navLinks.map((link) => (
                         <li class="py-1">
-                            <NavLink
+                            {link.href ? (<NavLink
                                 class="text-xl font-serif text-main hover:underline hover:underline-offset-2 hover:decoration-1 md:text-base"
                                 href={link.href}
                             >
                                 {link.text}
-                            </NavLink>
+                            </NavLink>) : (<span class="text-xl font-serif text-main md:text-base">{link.text}</span>)}
+                            
                         </li>
                     ))}
                 </ul>
