--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,9 @@ const hero = siteConfig.hero;
                     {hero.image.caption && <figcaption class="mt-1.5 text-xs sm:text-sm">{hero.image.caption}</figcaption>}
                 </figure>
             )}
-            {hero.text && <div class="max-w-none prose prose-dante sm:prose-lg" set:html={marked.parse(hero.text)} />}
+            {hero.text && hero.text.map((text) => {
+                return <div class="max-w-none prose prose-dante sm:prose-lg" set:html={marked.parse(text)} />}
+            )}
             {hero.actions && hero.actions.length > 0 && (
                 <div class="flex flex-wrap gap-4">
                     {hero.actions.map((action) => (
