--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,3 +1,7 @@
+---
+import Button from "./Button.astro";
+---
+
 <div class="feedback-form">
   <form
     data-netlify="true"
@@ -12,49 +16,12 @@
       </label>
     </p>
     <input type="hidden" name="form-name" value="contact" />
-    <label for="name">Name</label>
-    <input id="name" type="text" name="name" />
-    <label for="email">Email</label>
-    <input id="email" type="email" name="email" required />
-    <label for="feedback">Message</label>
-    <textarea id="contact" wrap="soft" name="contact" required></textarea>
-    <button type="submit">Submit</button>
+    <label class="text-md mb-1 block italic leading-tight font-serif font-medium group-hover:underline group-hover:decoration-dashed group-hover:underline-offset-4 group-hover:decoration-1" for="name">Name</label>
+    <input class="mb-6 w-full bg-transparent dark:border-gray-600 border border-main p-2" id="name" type="text" name="name" />
+    <label class="text-md mb-1 block italic leading-tight font-serif font-medium group-hover:underline group-hover:decoration-dashed group-hover:underline-offset-4 group-hover:decoration-1" for="email">Email</label>
+    <input class="mb-6 w-full bg-transparent dark:border-gray-600 border border-main p-2" id="email" type="email" name="email" required />
+    <label class="text-md mb-1 block italic leading-tight font-serif font-medium group-hover:underline group-hover:decoration-dashed group-hover:underline-offset-4 group-hover:decoration-1" for="feedback">Message</label>
+    <textarea class="mb-6 h-36 w-full bg-transparent dark:border-gray-600 border border-main p-2" id="contact" wrap="soft" name="contact" required></textarea>
+    <Button type="submit">Submit</Button>
   </form>
 </div>
-
-<style>
-  .feedback-form {
-    margin: 40px 40px;
-    min-width: 250px;
-    width: 65%;
-  }
-  label {
-    font-size: 16px;
-  }
-  input,
-  textarea,
-  button {
-    border-radius: 5px;
-    border: 1px solid #cbd5e1;
-    font-size: inherit;
-    margin: 15px 0;
-    padding: 12px 20px;
-    width: 100%;
-  }
-  /* button {
-    background-color: #2bdcd2;
-    border: 1px solid #2bdcd2;
-    color: #1e293b;
-    font-size: 16px;
-    width: 50%;
-  } */
-  .hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-  }
-</style>
