add course page

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -23,7 +23,7 @@ const { Content } = await page.render();
 <BaseLayout title={seo?.title ?? title} description={seo?.description} image={seo?.image} showHeader={false}>
     <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">{title}</h1>
     <article class="mb-12 text-normal leading-normal">
-        <div class="max-w-none">
+        <div class="max-w-none prose prose-dante sm:prose-md">
             <Content />
         </div>
     </article>
