--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,6 +4,9 @@ import BaseHead, { type Props as HeadProps } from '../components/BaseHead.astro'
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import Nav from '../components/Nav.astro';
+import '@fontsource-variable/eb-garamond';
+import '@fontsource-variable/noto-sans';
+
 
 export type Props = HeadProps & { showHeader?: boolean };
 
