hide header on form submission

--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
-<BaseLayout title="Submission Received!">
+<BaseLayout title="Submission Received!" showHeader={false}>
   <div class="container">
     <main>
       <h1 class="mb-8 text-2xl leading-tight font-serif italic sm:mb-8 sm:text-4xl">Submission Received!</h1>
