try to fix form

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -6,7 +6,7 @@ import Button from "./Button.astro";
   <form
     data-netlify="true"
     netlify-honeypot
-    name="feedback"
+    name="contact"
     method="POST"
     action="/success"
   >
