--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const pastSpeaking = speaking.filter(({ data }) => {
 
 ---
 
-<BaseLayout description={siteConfig.description} image={siteConfig.image}>
+<BaseLayout title="Kelly Vaughn | Engineering Leader, Speaker, Author" description={siteConfig.description} image={siteConfig.image}>
     <Hero />
     {
         upcomingSpeaking?.length > 0 && (
