--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import siteConfig from '../data/site-config';
             </a>
         ) : (
             <a class="font-serif text-2xl leading-tight font-medium text-theme-foreground sm:text-4xl" href="/">
-                {siteConfig.title}
+                Kelly Vaughn
             </a>
         )
     }
