--- a/src/pages/speaking/[...page].astro
+++ b/src/pages/speaking/[...page].astro
@@ -43,7 +43,7 @@ const pastSpeaking = speaking.filter(({ data }) => {
         upcomingSpeaking?.length > 0 && (
             <div class="mb-16 sm:mb-24">
                 <h2 class="mb-4 text-xl font-serif italic sm:mb-4 sm:text-2xl">Upcoming Speaking Events</h2>
-                {upcomingSpeaking.map((gig) => (
+                {upcomingSpeaking.toReversed().map((gig) => (
                     <SpeakingPreview gig={gig} class="mb-10 sm:mb-12" headingLevel="h3" />
                 ))}
             </div>
