--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,10 +36,10 @@ const upcomingSpeaking = speaking.filter(({ data }) => {
         <h2 class="mb-4 text-xl font-serif italic sm:mb-4 sm:text-2xl">What I'm up to</h2>
         <ul class="list">
             <li class="mb-4 max-w-none prose prose-dante sm:prose-md">
-                I'm about to fly to Sweden to record a new season of <a href="https://ladybug.dev">Ladybug Podcast</a>. Season 7 will be focused entirely on engineering leadership, and the episode list is available on the Ladybug Podcast website. We're open to sponsorships if you're interested in reaching our large audience.
+                Slowly getting to end of year. I'm working on an update for my course (to make it self-serve) so stay tuned.
             </li>
             <li class="mb-4 max-w-none prose prose-dante sm:prose-md">
-                I'm currently booking speaking engagements for 2025. If you're interested in having me speak at your event, please reach out to me <a href="/contact">here</a>.
+                Have a question? Reach out to me <a href="/contact">here</a>.
             </li>
         </ul>
     </ul>
