--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,7 +40,7 @@ const navLinks = siteConfig.footerNavLinks || [];
             )
         }
         <p class="text-sm">
-            &copy; {new Date().getFullYear()}&nbsp;<a class="hover:underline hover:underline-offset-2" href="/">Kelly Vaughn</a>. All rights reserved.
+            👋🏼 You look nice today!
         </p>
     </div>
 </footer>
