--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const upcomingSpeaking = speaking.filter(({ data }) => {
         <h2 class="mb-4 text-xl font-serif italic sm:mb-4 sm:text-2xl">What I'm up to</h2>
         <ul class="list">
             <li class="mb-4 max-w-none prose prose-dante sm:prose-md">
-                Slowly getting to end of year. I'm working on an update for my course (to make it self-serve) so stay tuned.
+                I recently started a new role at Zapier (<a href="https://jobs.ashbyhq.com/zapier?utm_source=x9bEQaKojA" target="_blank">we're hiring!</a>) and I'm excited to be working on building the future of AI orchestration. I'm also digging back into side projects, building <a href="https://connectwithme.at" target="_blank">Connect with Me</a> and <a href="https://shelfcontrol.co" target="_blank">Shelf Control</a>.
             </li>
             <li class="mb-4 max-w-none prose prose-dante sm:prose-md">
                 Have a question? Reach out to me <a href="/contact">here</a>.
